<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/image_home_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_indicator"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/testNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_test_name"
        app:boxStrokeColor="@color/main_color_pink"
        app:errorEnabled="true"
        app:hintTextColor="@color/main_color_pink"
        app:layout_constraintTop_toBottomOf="@id/image_home_indicator">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/edit_text_color"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/choose_the_date_and_time_for_test"
        android:textAppearance="@style/Text_16_main_text_color"
        app:layout_constraintTop_toBottomOf="@id/testNameInputLayout" />

    <LinearLayout
        android:id="@+id/dateTimePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/label"
        tools:ignore="DisableBaselineAlignment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_test_out"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.3"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date"
                android:maxLines="1"
                tools:text="08.02.2022" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeTestOut"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time"
                android:maxLines="1"
                tools:text="09:00" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/testDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/test_duration_time"
        android:textAppearance="@style/Text_16_main_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTimePickerLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minusBtn"
        style="@style/PlusMinusButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:icon="@drawable/ic_minus"
        app:layout_constraintStart_toStartOf="@id/testDurationLabel"
        app:layout_constraintTop_toBottomOf="@id/testDurationLabel" />

    <EditText
        android:id="@+id/time"
        style="@style/Widget.EditText"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@id/minusBtn"
        app:layout_constraintTop_toBottomOf="@id/testDurationLabel"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plusBtn"
        style="@style/PlusMinusButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icon_add"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toBottomOf="@id/testDurationLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadTestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/test_upload"
        app:layout_constraintTop_toBottomOf="@id/plusBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>